# pytest-overview

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: client.py  data_processor.py  main.py  models.py  processor.py
tests/: conftest.py  test_client.py  test_data_processor.py  test_main.py  test_models.py  test_processor.py
