[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unistream"
version = "0.1.0"
description = "University domains aggregator"
dependencies = [
    "httpx",
    "tldextract",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pytest-cov"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::urllib3.exceptions.NotOpenSSLWarning"
]
